--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+
     "@google/generative-ai": "^0.21.0",
+
+    "@solana/spl-token": "^0.4.9",
+
     "@solana/web3.js": "^1.98.0",
     "bs58": "^6.0.0",
     "class-variance-authority": "^0.7.1",
