--- a/package.json
+++ b/package.json
@@ -14,10 +14,8 @@
     "@metaplex-foundation/umi": "^0.9.2",
     "@metaplex-foundation/umi-bundle-defaults": "^0.9.2",
     "@metaplex/js": "^4.12.0",
+    "@prisma/client": "^6.1.0",
     "@project-serum/anchor": "^0.26.0",
-    "@solana/spl-token": "^0.4.8",
-    "@solana/spl-token-registry": "^0.2.4574",
-    "@solana/web3.js": "1.98.0",
     "@radix-ui/react-avatar": "^1.1.2",
     "@radix-ui/react-collapsible": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.4",
@@ -25,13 +23,16 @@
     "@radix-ui/react-separator": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.6",
-    "@prisma/client": "^6.1.0",
+    "@solana/spl-token": "^0.4.8",
+    "@solana/spl-token-registry": "^0.2.4574",
+    "@solana/web3.js": "1.98.0",
     "bs58": "^6.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cross-fetch": "^4.1.0",
     "crypto-js": "^4.2.0",
     "lucide-react": "^0.468.0",
+    "ncrypt-js": "^2.1.2",
     "next": "15.1.0",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
@@ -41,8 +42,8 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "@types/crypto-js": "^4.2.2",
     "@types/bcrypt": "^5.0.2",
+    "@types/crypto-js": "^4.2.2",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^20",
     "@types/react": "^19",
