--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "ncrypt-js": "^2.1.2",
     "next": "15.1.0",
     "next-themes": "^0.4.4",
+    "openai": "^4.77.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "solana-agent-kit": "^1.1.0",
