--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "next": "15.1.0",
     "next-themes": "^0.4.4",
     "openai": "^4.77.0",
+    "prisma": "^6.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "solana-agent-kit": "^1.1.0",
