--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "build": "next build",
     "start": "next start",
     "prisma:studio": "npx prisma studio",
-    "postinstall": "prisma generate",
-    "prisma:dbpush": "prisma db push",
+    "postinstall": "npx prisma generate",
+    "prisma:dbpush": "npx prisma db push",
     "lint": "next lint"
   },
   "dependencies": {
