--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "prisma:studio": "npx prisma studio",
-    "postinstall": "npx prisma generate",
+    "postinstall": "prisma generate",
     "prisma:dbpush": "npx prisma db push",
     "lint": "next lint"
   },
