--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "crypto-js": "^4.2.0",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.5.2",
+    "form-data": "^4.0.0",
     "framer-motion": "^12.0.5",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.468.0",
