--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
     "@solana/spl-token": "^0.4.8",
     "@solana/spl-token-registry": "^0.2.4574",
     "@solana/web3.js": "1.98.0",
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "bs58": "^6.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -80,7 +82,6 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "bcrypt": "^5.1.1",
     "jsonwebtoken": "^9.0.2",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
