--- a/package.json
+++ b/package.json
@@ -41,6 +41,11 @@
     "@radix-ui/react-separator": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.6",
+    "@solana-agent-kit/plugin-blinks": "^2.0.2",
+    "@solana-agent-kit/plugin-defi": "^2.0.2",
+    "@solana-agent-kit/plugin-misc": "^2.0.2",
+    "@solana-agent-kit/plugin-nft": "^2.0.2",
+    "@solana-agent-kit/plugin-token": "^2.0.2",
     "@solana/spl-token": "^0.4.8",
     "@solana/spl-token-registry": "^0.2.4574",
     "@solana/web3.js": "1.98.0",
@@ -69,7 +74,7 @@
     "react-hook-form": "^7.54.2",
     "react-resizable-panels": "^2.1.7",
     "recharts": "^2.15.0",
-    "solana-agent-kit": "^1.1.0",
+    "solana-agent-kit": "^2.0.2",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.2",
